--- a/src/content/blog/cypress-angular-integration-testing/index.mdx
+++ b/src/content/blog/cypress-angular-integration-testing/index.mdx
@@ -372,7 +372,7 @@ The test re-runs and we should see the result.
 We can click on each step of the test to see what happen.
 That's the _time travel_.
 
-![](images/time-travel.gif)
+![](/images/time-travel.gif)
 
 -----
 
