fix relative image errors from the build

--- a/src/content/blog/geminids/index.mdx
+++ b/src/content/blog/geminids/index.mdx
@@ -23,7 +23,7 @@ _กลุ่มดาวคนคู่ จากโปรแกรม Stellari
 
 วัตถุท้องฟ้าอีกอย่างหนึ่งที่น่าสนใจในกลุ่มดาวคนคู่ ก็คือกระจุกดาวเปิด [NGC 2168 หรือ M35](http://www.astropix.com/HTML/B_WINTER/M35.HTM) ครับ  ประกอบด้วยดาวฤกษ์ประมาณ 200 ดวง  อยู่บริเวณเท้าของคนคู่  สามารถสังเกตเห็นได้ด้วยตาเปล่าในคืนที่ท้องฟ้าโปร่งและไม่มีแสงรบกวนครับ
 
-![M35](images/m35.jpg)
+![M35](/images/m35.jpg)
 _กระจุกดาวเปิด M35 ([ภาพจาก mikeoates.org](http://www.mikeoates.org/))_
 
 สำหรับใครที่ชอบดูฝนดาวตก  กลุ่มดาวคนคู่ก็มีฝนดาวตกเหมือนกันนะครับ  ชื่อว่า [ฝนดาวตกเจมินิดส์](https://armno.in.th/20071207/geminids-meteorite/) ช่วงประมาณเดือนธันวาคมของทุกๆปี
