--- a/src/content/blog/moon-mars-transitions/index.mdx
+++ b/src/content/blog/moon-mars-transitions/index.mdx
@@ -28,11 +28,11 @@ url: /2008/05/04/moon-and-mars-transition/
 
 ท่องเน็ตไปเพลินๆ หารูปดวงจันทร์อยู่ ดันไปเจอกับเจ้านี่ครับ **[Google Moon](https://www.google.com/moon)**
 
-![google moon logo](images/moon_res_logo.gif)
+![google moon logo](/images/moon_res_logo.gif)
 
 เป็น **[Google Map](https://maps.google.com/)** บนดวงจันทร์ครับ ภาพก็ละเอียดดี มีข้อมูลยานอะพอลโลด้วย ลองไปเล่นกันดูนะครับ แล้วก็นี่อีกอันคล้ายๆกัน **[Google Mars](http://www.google.com/mars)**
 
-![google mars logo](images/logo_labs_mars.gif)
+![google mars logo](/images/logo_labs_mars.gif)
 
 แต่ **Google Mars** ยังอยู่ใน **[LABS](https://labs.google.com/)** อยู่เลย ในส่วนของ **Google Mars** นี้ยังไม่ค่อยมีข้อมูลรายละเอียดเท่าใดนัก แต่ก็พอเล่นได้เพลินๆล่ะครับ (ขออภัยที่ไม่ได้เก็บ Screenshot มาให้ดูเป็นตัวอย่างนะครับ พอดีมีข้อจำกัดด้านเวลา ;-)
 
