--- a/src/content/blog/orion-tales/index.mdx
+++ b/src/content/blog/orion-tales/index.mdx
@@ -19,7 +19,7 @@ url: /2007/11/18/oriontales1/
 
 **โอไรออน (Orion)** เป็นนายพรานที่มีความสามารถมากที่สุดในหมู่มนุษย์ด้วยกัน ด้วยความยะโสโอหัง เขาอวดอ้างสรรพคุณทางยาของเขาว่า เขานั้นเก่ง ไม่มีสัตว์ตัวไหนทำร้ายเขาได้ และจะสังหารสัตว์ทั่วทั้งโลก ทางด้านเทพีแห่งโลก **ไกอา หรือ กายยา หรือ จีอา (Gaia)** ทรงโกรธเมื่อได้ทราบข่าวดังกล่าว จึงให้แมงป่องไปกำจัดโอไรออนซะ เพื่อปกป้องสัตว์ป่าอันเป็นที่รักของตน โอไรออนถูกน้องแมงป่องตัวกระจ้อย ต่อยจนสิ้นใจ เทพีไกอา จึงให้โอไรออนขึ้นไปเกิดบนท้องฟ้า เป็นกลุ่มดาวนายพราน พร้อมกับแมงป่องน้อยตัวนั้น ก็ไปเกิดเป็นกลุ่มดาวแมงป่อง แต่ให้อยู่กันคนละฟากฟ้า เพราะว่าเป็นอริกันนั่นเอง ดังนั้น เวลาที่เราเห็นดาวนายพราน ก็จะไม่เห็นดาวแมงป่อง ถ้าเห็นแมงป่อง ก็ไม่เห็นนายพราน...
 
-![](images/Orion.jpeg)
+![](/images/Orion.jpeg)
 
 แต่ผมก็ชอบกลุ่มดาวทั้งสองดีนะ เพราะว่ามองหาง่าย และก็สวยดีด้วย
 _Thanks for image: [novaspace.com](https://www.novaspace.com/)_
