--- a/src/content/blog/stars-and-planets/index.mdx
+++ b/src/content/blog/stars-and-planets/index.mdx
@@ -24,7 +24,7 @@ url: /2007/11/03/stars-and-planets-differences/
 
 ดาวฤกษ์ที่เราเห็นกันทุกวันก็ได้แก่ดวงอาทิตย์ของเรานั่นเอง
 
-![ภาพดวงดาวโดย Ryan Hutton](images/stars.jpg)
+![ภาพดวงดาวโดย Ryan Hutton](/images/stars.jpg)
 
 _ภาพโดย [Ryan Hutton จาก unsplash.com](https://unsplash.com/photos/Jztmx9yqjBw)_
 
@@ -38,7 +38,7 @@ _ภาพโดย [Ryan Hutton จาก unsplash.com](https://unsplash.com/ph
 
 ซึ่งตอนนี้ ดาวพลูโตที่เคยเป็นดาวเคราะห์ดวงที่ 9 ในระบบสุริยะของเรา ก็ไม่ได้เป็นดาวเคราะห์อีกแล้ว แต่กลายเป็น **ดาวเคราะห์แคระ** ไปซะงั้น น่าสงสารจัง
 
-![ภาพดาวพลูโต](images/pluto.jpg)
+![ภาพดาวพลูโต](/images/pluto.jpg)
 
 _ภาพจาก [space.com](https://www.space.com/41769-pluto-planet-definition-debate-rages-on.html)_
 
