--- a/src/content/blog/lhc/index.mdx
+++ b/src/content/blog/lhc/index.mdx
@@ -15,7 +15,7 @@ url: /2008/09/23/what-is-lhc/
 
 ประมาณสองอาทิตย์ก่อน ข่าวที่ดังข่าวหนึ่ง _(ไม่แพ้ข่าวรัฐบาล – พันธมิตร)_ ก็คือข่าววิทยาศาสตร์เรื่องเครื่องเร่งอนุภาคขนาดใหญ่ที่มีชื่อว่า [LHC (Large Hadron Collider)](https://jusci.net/node/753) ที่หลายๆคนกลัวว่า มันจะทำให้เกิดหลุมดำและกลืนกินโลกทั้งใบให้หายไปในพริบตา! โอ้… ขนาดนั้นเชียวหรือ? ด้วยความที่อยากรู้ จึงไปหาข้อมูลในเน็ตดู แล้วก็ประจวบเหมาะพอดีที่มีรุ่นพี่พรีเซ้นต์งานเรื่องนี้ด้วย เลยได้ความรู้เพิ่มอีกหน่อย
 
-![LHC](images/lhcupdate.jpg)
+![LHC](/images/lhcupdate.jpg)
 (ภาพเครื่องเร่งอนุภาคขนาดใหญ่ LHC จาก [home.cern](https://home.cern/news/news/accelerators/cerns-large-hadron-collider-gears-run-2))
 
 แรกเริ่มเดิมทีนั้น ทฤษฎีการกำเนิดจักรวาล **Big Bang** นั้นได้รับการยอมรับจากบรรดานักวิทยาศาสตร์ว่า เป็นทฤษฎีที่น่าเชื่อถือมากที่สุด แต่ก็เป็นธรรมดาของมนุษย์เราครับ ความสงสัยไม่มีที่สิ้นสุด
