fix many images with ratio

--- a/src/content/blog/60-percent-mechanical-keyboard-with-arrows/index.mdx
+++ b/src/content/blog/60-percent-mechanical-keyboard-with-arrows/index.mdx
@@ -29,11 +29,11 @@ import Picture from '../../../components/Picture.astro';
 ข้อจำกัดก็คือ แผ่น plate ที่ผมใช้นั้น มี layout ตายตัวเพราะมันถูกเจาะรูมาพอดีแล้ว ไม่สามารถเอาปุ่ม arrow keys ไปยัดตรงที่กรอบไว้ในรูปข้างล่างได้ ส่วนปุ่ม <kbd>left shift</kbd>
 ก็ถูกจำกัดไว้ที่ 2.25U เท่านั้น
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/plate-layout.jpg" alt="ANSI Layout ของ plate ที่ใช้" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/plate-layout.jpg" alt="ANSI Layout ของ plate ที่ใช้" />
 
 > plate คือแผ่นที่อยู่ตรงกลางระหว่าง switch กับแผงวงจร (PCB) ของ keyboard ถูกเจาะรูมาเพื่อให้วาง switch ได้พอดี ช่วยเพิ่มความแข็งแรงให้ keyboard แล้วก็ยังเป็นตัวกำหนด layout ของ keyboard ด้วย
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/mark4-layers.jpg" alt="ส่วนประกอบแต่ละชั้นของ Mark 4" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/mark4-layers.jpg" alt="ส่วนประกอบแต่ละชั้นของ Mark 4" />
 
 เมื่อมันเป็นข้อจำกัด ก็เลยจะลองเอา plate ออก แล้วทำ keyboard แบบไม่ใช้ plate ดู ลองหาข้อมูลดูแล้ว พบว่าก็มีคนทำอยู่เหมือนกัน แต่อาจไม่เป็นที่นิยมเท่าไหร่
 
@@ -43,15 +43,15 @@ import Picture from '../../../components/Picture.astro';
 
 เริ่มจากการ desolder ถอด switch ทั้งหมดออกจาก PCB ก่อน (ไม่ชอบเท่าไหร่แต่ก็ต้องทำครับ)
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/remove-all-switches.jpg" alt="ถอด switch ทั้งหมดออกจาก PCB" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/remove-all-switches.jpg" alt="ถอด switch ทั้งหมดออกจาก PCB" />
 
 หลังจากเอา switch ออกหมดแล้ว ก็ลอง test PCB กับเว็บ [keyboardchecker.com](http://keyboardchecker.com/) ดูอีกทีว่าพังไหม โชคดีที่ไม่พัง ก็ใส่ stabilizer ลงไปได้เลย
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/test-pcb.jpg" alt="ทดสอบ PCB หลังจากเอา switch ออก" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/test-pcb.jpg" alt="ทดสอบ PCB หลังจากเอา switch ออก" />
 
 จากนั้นก็บัดกรี switch ลงไปบน PCB ทีละตัว
 
-<Picture  ratio="16-9" src="/images/60-percent-mechanical-keyboard-with-arrows/put-switches-on.jpg" alt="บัดกรี switch ลงไปบน PCB" />
+<Picture  width="1600" height="900" src="/images/60-percent-mechanical-keyboard-with-arrows/put-switches-on.jpg" alt="บัดกรี switch ลงไปบน PCB" />
 
 ถึงแม้ว่า switch ที่ผมมีเป็นแบบ PCB-mount (5-pin) แต่ก็พบกว่าการที่ไม่มี plate มาคอยพยุง switch ทำให้บัดกรียากกว่าเดิมเยอะเลย เพราะระหว่างที่ถืออุปกรณ์บัดกรีอยู่ ก็ต้องใช้อีกมือพยายามกด switch ให้แนบชิดกับแผ่น PCB ก่อนตะกั่วจะแข็ง ค่อนข้างทุลักทุเลครับ
 
@@ -62,20 +62,20 @@ import Picture from '../../../components/Picture.astro';
 ตรง spacebar จากปกติที่มี switch ตัวเดียวก็ต้องแยกเป็น 3 ตัว
 แล้วก็ต้องเพิ่ม 2U stabilizer อีก 2 ตัวด้วย รวมเป็นทั้งหมด 5 ตัว (แต่จะไม่ได้ใช้ stabilizer ตัวยาว 6.25U ของ spacebar)
 
-<Picture  ratio="16-9" src="/images/60-percent-mechanical-keyboard-with-arrows/all-switches.jpg" alt="บัดกรี switch ครบแล้ว" />
+<Picture  width="1600" height="900" src="/images/60-percent-mechanical-keyboard-with-arrows/all-switches.jpg" alt="บัดกรี switch ครบแล้ว" />
 
 ## ฟันเบี้ยว
 
 ถึงตรงนี้ ถ้าสังเกตดีๆ ก็จะเริ่มเห็นความผิดปกติแล้ว และเห็นชัดมากตอนใส่ keycaps ลงไป
 นั่นก็คือ ปุ่มมันไม่ตรงอยู่หลายปุ่มมาก เหมือนฟันเด็กที่ยังไม่ได้จัดฟัน
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/bent-rows.jpg" alt="ปุ่มบน keyboard ที่บิดๆ เบี้ยวๆ" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/bent-rows.jpg" alt="ปุ่มบน keyboard ที่บิดๆ เบี้ยวๆ" />
 
 ก็คิดว่าน่าจะเกิดจากที่ไม่มี plate นั่นแหละครับ มันเลยมีโอกาสที่วาง switch ลงไปบน PCB แล้วมันไม่ตรงเป๊ะ ก็ต้องเอากลับมาแก้อีกที ด้วยการเอาหัวแร้งจิ้มให้ตะกั่วที่ขา switch ละลายแล้วรีบจัดให้มันตรง ทีละอันๆ ไปครับ
 
 สุดท้ายแล้วก็ดีขึ้น แต่ไม่ตรงเป๊ะเท่ากับแบบใช้ plate
 
-<Picture  ratio="3-2" src="/images/60-percent-mechanical-keyboard-with-arrows/after-fixes.jpg" alt="ปุ่มบน keyboard ที่แก้แล้ว" />
+<Picture  width="1600" height="1066" src="/images/60-percent-mechanical-keyboard-with-arrows/after-fixes.jpg" alt="ปุ่มบน keyboard ที่แก้แล้ว" />
 
 -----
 
@@ -87,7 +87,7 @@ import Picture from '../../../components/Picture.astro';
 พร้อมกับ split spacebar ให้เป็น gimmick เล็กๆ ให้ดูแปลกตา แต่จริงๆ การมี spacebar เล็กๆ 2 อันแยกกัน ไม่ได้ดีกว่าการมี spacebar ยาวๆ 1 อันเลย ใช้งานได้ไม่ต่างกัน
 อีกสักพักคงเปลี่ยนกลับไปเป็น spacebar ธรรมดา
 
-<Picture  ratio="16-10" src="/images/60-percent-mechanical-keyboard-with-arrows/mark4-1.jpg" alt="mark 4.1: custom 60% mechanical keyboard with arrows" />
+<Picture  width="1600" height="1000" src="/images/60-percent-mechanical-keyboard-with-arrows/mark4-1.jpg" alt="mark 4.1: custom 60% mechanical keyboard with arrows" />
 
 (แต่การใส่ keycaps แบบกลับหัวเนี่ยช่วยให้พิมพ์แถวล่างได้ง่ายขึ้นจริง แนะนำให้ลอง)
 
@@ -110,4 +110,4 @@ import Picture from '../../../components/Picture.astro';
 
 ถ้าถามผมว่าคุ้มไหม ผมว่าไม่คุ้มครับ 😅 ถ้าเลือกได้ผมว่าหา plate ใส่ให้ตรงกับ layout ที่อยากได้ดีกว่า ทำงานง่ายกว่าเยอะเลย
 
-<Picture  ratio="16-10" src="/images/60-percent-mechanical-keyboard-with-arrows/bottom-row.jpg" alt="ปุ่ม MENU ที่อยู่ตรงกลางระหว่าง split spacebar" />
+<Picture  width="1600" height="1000" src="/images/60-percent-mechanical-keyboard-with-arrows/bottom-row.jpg" alt="ปุ่ม MENU ที่อยู่ตรงกลางระหว่าง split spacebar" />
