--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -201,14 +201,14 @@ I learn later on that what I miss was [socketing](https://github.com/foostan/crk
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
     <Image
       src={import('./images/soldered-pro-micro.jpg')}
-      alt=""
+      alt="soldered pro micro"
 
 
       width={800}
     />
     <Image
       src={import('./images/oled-module-installed.jpg')}
-      alt=""
+      alt="OLED module installed"
 
 
       width={800}
