--- a/src/content/blog/corne-keyboard/th/index.mdx
+++ b/src/content/blog/corne-keyboard/th/index.mdx
@@ -218,12 +218,12 @@ keyboard ที่ใช้งานตัวล่าสุดคือ Ginkgo6
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
     <Image
       src={import('../images/soldered-pro-micro.jpg')}
-      alt=""
+      alt="soldered pro micro"
       width={800}
     />
     <Image
       src={import('../images/oled-module-installed.jpg')}
-      alt=""
+      alt="OLED module installed"
       width={800}
     />
   </div>
