--- a/src/content/blog/css-user-select/index.mdx
+++ b/src/content/blog/css-user-select/index.mdx
@@ -51,6 +51,8 @@ For example, when long-press on a button, this could happen.
   src="/images/css-user-select/select-text-menu.png"
   alt="callout menu on mobile Safari"
   caption="Unwanted callout menu when long press on a UI element"
+  width="738"
+  height="366"
 />
 
 `user-select: none` was added to prevent this issue.
