--- a/src/content/blog/cypress-angular-integration-testing/index.mdx
+++ b/src/content/blog/cypress-angular-integration-testing/index.mdx
@@ -25,6 +25,7 @@ from unit tests to end-to-end tests.
   src="/images/cypress-angular-integration-testing/cypress-logo.png"
   alt="Cypress Logo"
   width="515"
+  height="195"
 />
 
 I recently has a chance to use Cypress
@@ -82,6 +83,7 @@ We are going to test the default home page which looks like this:
   src="/images/cypress-angular-integration-testing/default-home-page.png"
   alt="Angular's generated home page"
   width="785"
+  height="615"
 />
 
 To install Cypress into the project:
@@ -106,6 +108,7 @@ learn from.
   src="/images/cypress-angular-integration-testing/running-cypress-first-time.png"
   alt="Running Cypress for the first time"
   width="800"
+  height="550"
 />
 
 We can run the example tests to see Cypress in action.
@@ -114,6 +117,7 @@ We can run the example tests to see Cypress in action.
   src="/images/cypress-angular-integration-testing/running-all-specs.png"
   alt="Running all specs"
   width="1200"
+  height="733"
 />
 
 -----
@@ -140,6 +144,7 @@ we can add to the config file.
   src="/images/cypress-angular-integration-testing/config-schema.png"
   alt="Added $schema to the config file"
   width="1024"
+height="768"
 />
 
 ### Changing tests directory
@@ -151,6 +156,7 @@ I like rename the folder to `tests/e2e` to make it more generic.
   src="/images/cypress-angular-integration-testing/renamed-cypress-folder.png"
   alt="Move generated tests from Cypress to test/ folder"
   width="502"
+  height="349"
 />
 
 Then we need to update the paths in `cypress.json` file to reflect
@@ -250,6 +256,7 @@ for auto-completion and method signatures of Cypress.
   src="/images/cypress-angular-integration-testing/code-intellisense.png"
   alt="Getting code intellisense from VSCode"
   width="1024"
+  height="768"
 />
 
 Then write the first test in `home-page.spec.js` file.
@@ -278,6 +285,7 @@ the dropdown above Run all specs button.
   src="/images/cypress-angular-integration-testing/run-all-specs-button.png"
   alt="Run all specs"
   width="547"
+  height="400"
 />
 
 Cypress will open a new browser window and run the test.
@@ -289,6 +297,7 @@ And we can see the test is success.
   src="/images/cypress-angular-integration-testing/test-running-window.png"
   alt="Test running window"
   width="1138"
+  height="603"
 />
 
 When hover over a step on the left panel,
@@ -301,6 +310,7 @@ so the browser highlights the element on the page.
   src="/images/cypress-angular-integration-testing/hover-step.png"
   alt="Hover each step to see the action"
   width="1138"
+  height="603"
 />
 
 ### Add another test
@@ -314,6 +324,7 @@ the buttons should display the command in the terminal preview area below.
   src="/images/cypress-angular-integration-testing/buttons-to-test.png"
   alt="Buttons on the page we want to test"
   width="685"
+  height="319"
 />
 
 Create another test case in `home-page.spec.js` file.
@@ -334,6 +345,7 @@ near the preview window's address bar.
   src="/images/cypress-angular-integration-testing/open-selector-playground.png"
   alt="Open selector playground in Cypress window"
   width="395"
+height="201"
 />
 
 Then we can select an element on the page
@@ -344,6 +356,7 @@ that we can copy it to use in our test.
   src="/images/cypress-angular-integration-testing/select-element.png"
   alt="Selecting element from the page"
   width="629"
+  height="437"
 />
 
 Update our test case with action and assertion.
@@ -367,6 +380,7 @@ The test re-runs and we should see the result.
   src="/images/cypress-angular-integration-testing/second-test-case-result.png"
   alt="Test result after updated the test"
   width="1088"
+  height="616"
 />
 
 We can click on each step of the test to see what happen.
