--- a/src/content/blog/ffmpeg-video-poster-image/index.mdx
+++ b/src/content/blog/ffmpeg-video-poster-image/index.mdx
@@ -45,5 +45,5 @@ Then I can use the poster image with `<video>` element like:
   <source src="video.mpg" type="video/mp4" />
 </video>
 ```
-<Picture src="/images/ffmpeg-video-poster-image/output.jpg" alt="The source video file compares with output poster image"
+<Picture width="500" height="205" src="/images/ffmpeg-video-poster-image/output.jpg" alt="The source video file compares with output poster image"
   caption="The source video file compares with output poster image" />
