--- a/src/content/blog/git-commands/index.mdx
+++ b/src/content/blog/git-commands/index.mdx
@@ -53,6 +53,8 @@ $ git status
   src="/images/git-commands/normal-status.png"
   alt="รูป output จาก git status แบบปกติ"
   caption="รูป output จาก git status แบบปกติ"
+  width="500"
+  height="259"
 />
 
 สิ่งที่ผมเห็นคือ: ก้อนสีเหลือง ก้อนสีเขียว และก้อนสีแดง ในขนาดที่ต่างกัน
@@ -61,6 +63,8 @@ $ git status
   src="/images/git-commands/normal-status-graphic.png"
   alt="รูป output จาก git status แบบก้อนๆ"
   caption="รูป output จาก git status แบบก้อนๆ"
+  width="500"
+  height="259"
 />
 
 - ถ้าผมแค่ edit ไฟล์อย่างเดียว ก็เดาได้ว่าจะต้องมีแต่ก้อนสีเหลือง
@@ -84,6 +88,8 @@ $ git diff --staged
   src="/images/git-commands/git-diff-output.png"
   alt="รูป output จาก git diff"
   caption="รูป output จาก git diff"
+  width="500"
+  height="378"
 />
 
 (ผมใช้ [`diff-so-fancy`](https://github.com/so-fancy/diff-so-fancy) กับ diff view
@@ -250,6 +256,8 @@ $ man git-<sub_command>
   src="/images/git-commands/git-man.png"
   alt="รูป ตัวอย่าง man page ของ git merge"
   caption="ตัวอย่าง man page ของ git merge"
+  width="500"
+  height="400"
 />
 
 ---
@@ -277,6 +285,8 @@ $ man git-<sub_command>
   src="/images/git-commands/git-ldm.png"
   alt="รูป output จาก git ldm"
   caption="รูป output จาก `git ldm`"
+  width="800"
+  height="463"
 />
 
 ใครมีเทคนิคการใช้ git ที่ชื่นชอบ มาแนะนำกันได้นะ ✌️
