--- a/src/content/blog/git-commit-message-template/index.mdx
+++ b/src/content/blog/git-commit-message-template/index.mdx
@@ -57,6 +57,8 @@ Then when we run `$ git commit`, the editor window is now pre-filled with our te
   src="/images/git-commit-message-template/commit-with-template.png"
   alt="git commit with template"
   caption="commit message with pre-filled template"
+  width="776"
+  height="322"
 />
 
 I prefer to have the same template for all repositories,
