--- a/src/content/blog/ten-years/index.mdx
+++ b/src/content/blog/ten-years/index.mdx
@@ -176,7 +176,7 @@ import Picture from '../../../components/Picture.astro';
   src="/images/ten-years/lake.jpg"
   alt="ทะเลสาบ Kawaguchi"
   caption="รูปพักสายตา ไม่เกี่ยวกับเนื้อหา - ทะเลสาบ Kawaguchi"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 -----
