--- a/src/content/blog/unboxing-canyon-endurace-cf-sl/index.mdx
+++ b/src/content/blog/unboxing-canyon-endurace-cf-sl/index.mdx
@@ -36,7 +36,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/box-front.jpg"
   alt="กล่อง Canyon Endurace CF SL"
-  ratio="3-2"
+  width="1600" height="1066"
   caption="กล่อง Canyon Endurace ด้านหน้า"
 />
 
@@ -45,7 +45,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/packages.jpg"
   alt="กล่องด้านข้าง"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 แกะกล่องเล็กก่อน ผ้าพันแฮนด์ [Canyon Ergospeed](https://www.canyon.com/en-th/gear/components/grips-and-tape/bar-tape/canyon-ergospeed-gel-bar-tape/9100403.html) สีดำ ราคาประมาณสี่ร้อยกว่าบาท
@@ -56,7 +56,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/bar-tape.jpg"
   alt="ผ้าพันแฮนด์ Canyon"
-  ratio="3-2"
+  width="1600" height="1066"
   caption="ผ้าพันแฮนด์ Canyon"
 />
 
@@ -69,7 +69,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/top.jpg"
   alt="เปิดกล่องจากด้านบน"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 มีกล่องเล็กข้างในอีกกล่อง
@@ -77,7 +77,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/opened.jpg"
   alt="ข้างในกล่องมีเฟรมจักรยาน กับกล่องเล็กๆ อีกหนึ่งใบ"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 กล่องเล็กก็ยังเป็นสไตล์เรียบๆ แบบ Canyon เป็นกล่องใส่เอกสารและเครื่องมือต่างๆ
@@ -85,20 +85,20 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/small-box.jpg"
   alt="กล่องอุปกรณ์"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/for-you.jpg"
   alt="ข้างในกล่องอุปกรณ์"
-  ratio="3-2"
+  width="1600" height="1066"
   caption="ข้างในมีแถบคาดที่เขียนว่า FOR YOU รู้สึกเป็นคนพิเศษขึ้นมาทันที"
 />
 
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/stripe.jpg"
   alt="แถบคาดที่มีโลโก้ Canyon"
-  ratio="3-2"
+  width="1600" height="1066"
   caption="รายละเอียดเล็กๆ น้อยๆ: แถบคาดเกี่ยวกันด้วยโลโก้ของ Canyon"
 />
 
@@ -107,7 +107,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/bag.jpg"
   alt="กระเป๋า Canyon"
-  ratio="3-2"
+  width="1600" height="1066"
   caption="กระเป๋า Canyon"
 />
 
@@ -119,7 +119,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/tools.jpg"
   alt="torque wrench ของ Canyon"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ถัดไปเป็นถุงผ้าเล็กๆ ใส่แกนปลด Thru-Axle กับตัวปรับสายเกียร์ของ Shimano มาให้
@@ -127,7 +127,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/thru-axles.jpg"
   alt="DT Swiss Thru-Axle"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 แกนปลด [Thru-Axle](https://www.canyon.com/en-th/gear/components/wheels/thru-axles/canyon-dt-swiss-road-thru-axle/9100565.html) ของ Canyon ที่ออกแบบร่วมกับ DT Swiss
@@ -136,7 +136,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/thru-axles-2.jpg"
   alt="Canyon DT Swiss Thru-Axle"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 และสุดท้ายคือคู่มือที่หนาและหนักมาก!
@@ -144,7 +144,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/manual.jpg"
   alt="คู่มือ Canyon Bike"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ---
@@ -154,7 +154,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/frame.jpg"
   alt="เฟรม Canyon Endurace"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 เดินสาย guide ไว้ให้แล้วด้วย
@@ -162,13 +162,13 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/frame-2.jpg"
   alt="เฟรม Canyon Endurace จากด้านบน"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/frame-3.jpg"
   alt="โลโก้ Canyon บนเฟรม Canyon Endurace"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ติดฟิล์มกันรอยมาให้ตรง chainstay ฝั่ง drive-side
@@ -176,7 +176,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/chainstay.jpg"
   alt="chainstay ที่ติดฟิล์มกันรอยมาจากโรงงาน"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ชุด integrated cockpit H31 เรียบๆ
@@ -184,7 +184,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/cockpit.jpg"
   alt="H31 Integrated Cockpit"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 แฮนด์กว้าง 420mm สเต็มยาว 100mm มีแหวนรองคอมาให้ 4 ชิ้น
@@ -192,7 +192,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/h31-bar.jpg"
   alt="Canyon H31 Bar"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 หลักอานคาร์บอน [VCLS 2.0 S15](https://www.canyon.com/en-th/gear/components/posts-and-clamps/seatposts/canyon-s15-vcls-cf-seatpost/148287.html)
@@ -203,13 +203,13 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/seatpost.jpg"
   alt="หลักอาน Canyon S15"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/dropout.jpg"
   alt="dropout"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 สุดท้าย กล่องด้านหลังมีข้อความ **Made with Passion &mdash; Made for You.**
@@ -217,7 +217,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 <Picture
   src="/images/unboxing-canyon-endurace-cf-sl/box-back.jpg"
   alt="กล่อง Canyon Endurace CF SL"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ทั้งหมดก็มีเท่านี้ครับ
