--- a/src/content/blog/web-typography-book/index.mdx
+++ b/src/content/blog/web-typography-book/index.mdx
@@ -26,7 +26,7 @@ import Picture from '../../../components/Picture.astro';
   src="/images/web-typography-book/book-cover.jpg"
   alt="ปกหนังสือ Better Web Typography for a Better Web"
   caption="ปกหนังสือ Better Web Typography for a Better Web"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 > เล่มที่ผมอ่านเป็น edition แรก แต่ตอนนี้มี 2<sup>nd</sup> edition ออกมาแล้ว เพิ่มเนื้อหาและปรับปรุงรูปภาพนิดหน่อย แต่ผมไม่แน่ใจว่า 2<sup>nd</sup> edition ยังพิมพ์ออกมาเป็นเล่มอยู่ไหม บนหน้าเว็บตอนนี้มีแต่แบบ e-book ให้เลือกครับ
@@ -59,7 +59,7 @@ import Picture from '../../../components/Picture.astro';
 <Picture
   src="/images/web-typography-book/ch-5.jpg"
   alt="บทที่ 5"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 ถัดมาเป็นเรื่องเกี่ยวกับเว็บโดยตรงเลยคือ การหาขนาดอักษร `font-size`, ระยะ `line-height` และความยาวของบรรทัด `line width` หรือ `line length`  ที่เหมาะสม
@@ -92,18 +92,18 @@ import Picture from '../../../components/Picture.astro';
 <Picture
   src="/images/web-typography-book/code.jpg"
   alt="Code SCSS/CSS"
-  ratio="3-2"
+  width="1600" height="1066"
 />
 
 <Picture
-  ratio="3-2"
+  width="1600" height="1066"
   src="/images/web-typography-book/print.jpg"
   alt="รูปประกอบเนื้อหามีเยอะ"
   caption="การยกตัวอย่างประกอบเนื้อหาก็เข้าใจง่ายดี ไม่ต้องเป็น designer จ๋าๆ ก็เข้าใจได้"
 />
 
 <Picture
-  ratio="3-2"
+  width="1600" height="1066"
   src="/images/web-typography-book/page.jpg"
   alt="รูปตัวอย่างจากหนังสือ"
   caption="คุณภาพการพิมพ์ดีมาก"
