--- a/src/content/blog/convert-png-to-jpg-command-line-sips/index.mdx
+++ b/src/content/blog/convert-png-to-jpg-command-line-sips/index.mdx
@@ -53,6 +53,8 @@ especially when the screenshot has photos in it.
   src="/images/convert-png-to-jpg-command-line-sips/screenshot-png.jpg"
   alt="Captured screenshot in PNG format"
   caption="Captured Screenshot in PNG format: 4.5MB"
+  width="1400"
+  height="986"
 />
 
 I wanted to quickly convert it to a JPG. I created a bash function in my [`.functions`](https://github.com/armno/dotfiles/blob/master/.functions) dotfile to do that.
@@ -77,6 +79,8 @@ I get the JPG version of the file named `screenshot.jpg`.
   src="/images/convert-png-to-jpg-command-line-sips/screenshot-jpg.jpg"
   alt="Captured screenshot after converted to JPG format: 666KB"
   caption="Captured Screenshot after converted to JPG format: 666KB"
+  width="1400"
+  height="986"
 />
 
 _More info about sips on [the sips man-page](https://www.unix.com/man-page/osx/1/sips/)._
